--- a/ImpactMap/Content/Site.css
+++ b/ImpactMap/Content/Site.css
@@ -13,7 +13,6 @@ dd{
     color:darkgray;
     font-weight:200;
     font-size: 12pt;
-    padding-left:20px;
 }
 
 .loginlink a{
@@ -74,6 +73,15 @@ a href{
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
         }
 
+.dbSpans{
+    min-height:200px;
+    width: 32%;
+    display: inline-block;
+    vertical-align: top;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column */
 .dl-horizontal dt {
@@ -83,13 +91,13 @@ a href{
 .fa-exclamation{
     color: red;
     font-size: 50pt;
-    text-align:right;
+    vertical-align: middle;
 }
 
 .fa-file-o{
     color: #0C7D8B;
     font-size: 40pt;
-    text-align: right;
+    vertical-align: middle;
 }
 
 .fa.fa-minus-circle{
