--- a/ImpactMap/Views/Projects/Index.cshtml
+++ b/ImpactMap/Views/Projects/Index.cshtml
@@ -55,6 +55,6 @@
 </table>
 
     <div>
-        @Html.ActionLink("Back to Dashboard", "Index", "Dashboard")
+        @Html.ActionLink("Back to Dashboard", "Index", "Dashboard", new { @class = "button" })
     </div>
 </div>
