--- a/ImpactMap/Views/Shared/_Layout.cshtml
+++ b/ImpactMap/Views/Shared/_Layout.cshtml
@@ -4,6 +4,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/Content/images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/Content/images/favicons/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/Content/images/favicons/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/Content/images/favicons/manifest.json">
+    <link rel="mask-icon" href="/Content/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="/Content/images/favicons/favicon.ico">
+    <meta name="msapplication-config" content="/Content/images/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
