Working on map stuff

--- a/ImpactMap/Views/Home/About.cshtml
+++ b/ImpactMap/Views/Home/About.cshtml
@@ -1,7 +1,38 @@
-﻿@{
+﻿@model  IEnumerable<ImpactMap.Models.Entity>
+
+@{
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<input id="searchAddressField" />
+<div id="map"></div>
+
+@section Scripts {
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4VlRpvKNloHrCwtMLKy_X2UQVhW_8L5Q&callback=initialize">
+</script>
+<script src="~/Scripts/googlemaps.js"></script>
+
+<script>    
+initialize();
+
+    @foreach (var item in Model)
+    {
+
+        string address = item.address1 + "+" + item.address2 + "+" + item.city + "+" + item.state + "+" + item.zip;
+        <text>
+        console.log("@item.name");
+              
+
+        markerlocation(@item.ID, "@address", "@item.name", "@item.description");
+        </text>
+    }
+
+</script>
+    }
+    
+
+
+
+
