--- a/ImpactMap/Views/Investments/Index.cshtml
+++ b/ImpactMap/Views/Investments/Index.cshtml
@@ -40,7 +40,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.date)
+                    @Html.DisplayFor(modelItem => item.date)).ToString("MM/DD/YY"))
                 </td>
                 <td>
                     $@Html.DisplayFor(modelItem => item.amount)
