--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -31,32 +31,59 @@
             @Html.ActionLink("Edit", "Edit", "Entity", new { @class = "addpadding button" })
     </span>
 
-    <span class="spaceDivs dbSpans">
+    @*<span class="spaceDivs dbSpans">
+                <h2>My Investment Tags</h2>
+                <div>
+                    @if (Categories.Index != 0)
+                    {
+                        <table class="table">
+                            @{foreach (var item in Categories.Index)
+                                {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.name)
+                                        </td>
+                                    </tr>
+                                }
+                            }
+                        </table>
+                    }
+                    else
+                    {
+                        <p>You Don't Have Any Investment Tags!</p>
+                    }
+                </div>
+                @Html.ActionLink("Create New Tag", "Create", "Categories", "Categories", new { @class = "button" })
+            </span>
+        @*Insert categories header, list, and create new button.
+        </span>*@
+
+    @*<span class="spaceDivs dbSpans">
         <h2>My Investment Tags</h2>
         <div>
             @if (Model.categories)
 
             {
-                    <table class="table">
-                        @{foreach (var item in Categories.Index)
+                <table class="table">
+                    @{foreach (var item in Categories.Index)
                         {
-                                <tr>
-                                    <td>
-                                        @Html.DisplayFor(modelItem => item.name)
-                                    </td>
-                                </tr>
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.name)
+                                </td>
+                            </tr>
                         }
+                    }
+                </table>
                         }
-                    </table>
-            }
-            else
-            {
-                                <p>You Don't Have Any Investment Tags!</p>
-            }
-            </div>
-            @Html.ActionLink("Create New Tag", "Create", "Categories", "Categories", new { @class = "button" })
-        </span>
-    <span class="spaceDivs dbSpans">
+                        else
+                        {
+                            <p>You Don't Have Any Investment Tags!</p>
+                        }
+        </div>
+        @Html.ActionLink("Create New Tag", "Create", "Categories", "Categories", new { @class = "button" })
+    </span>*@
+    @*<span class="spaceDivs dbSpans">*@
         @*@if ( user.ID has new reports/ report requests)
                 {
                     <span style="display:block; text-align:right;">
@@ -74,10 +101,10 @@
             <span class="fa fa-exclamation"></span>
             <span class="fa fa-file-o"></span>
         </span>
-    </span>
 </span>
 
-    
+
+
 
 <div class="spaceDivs">
     <h2>Investments Sent</h2>
@@ -89,7 +116,7 @@
 
         @if (Model.investmentsOut.Count != 0)
         {
-            <table class="table">
+             <table class="table">
                 <tr>
                     <th>
                         Investment Date
@@ -108,121 +135,192 @@
                 @*Displays each investment in the table*@
                 @{foreach (var item in Model.investmentsOut.Take(5))
                     {
-
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.date.ToString("MM/DD/YY"))
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.amount)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.entityTo.name)
-                    </td>
-                    <td>
-                        @{  if (item.projectTo.report != null)
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.date.ToString("MM/DD/YY"))
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.amount)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.entityTo.name)
+                            </td>
+                            <td>
+                                @{  if (item.projectTo.report != null)
                                     {
                                         string reportID = Convert.ToString(item.projectTo.report.ID);
-                                @Html.ActionLink("Report", reportID, "Details", "Report")
+                                        @Html.ActionLink("Report", reportID, "Details", "Report")
                                     }
                                     else
                                     {
-                                <span>No report available.</span>
+                                        <span>No report available.</span>
                                     }
-                        }
-                    </td>
-                </tr>
-                                    }
+                                }
+                            </td>
+                        </tr>
+                     }
                 }
 
-
-            </table>
-                            }
-                            else
-                            {
-                                <p>You Currently Have No Investments</p>
-                            }
-
-    </div>
-</div>
-<div class="spaceDivs">
-    <h2>My Projects</h2>
-    <div class="addpadding">
-        @Html.ActionLink("Create New Project", "Create", "Projects", "Projects", new { @class = "button" })
-
-        @Html.ActionLink("View All Projects", "Index", "Projects", "Projects", new { @class = "button" })
-
-        @if (Model.projects.Count != 0)
-        {
-
-        <table class="table">
-            <tr>
-                <th>
-                    Project Name
-                </th>
-                <th>
-                    Value of Grant
-                </th>
-                <th>
-                    Grant Date
-                </th>
-                <th>
-                    Donor(s)
-                </th>
-                <th>
-                    Report
-                </th>
-            </tr>
-
-
-            @if (Model.investmentsOut != null)
-                {
-                    foreach (var item in Model.projects.Take(5))
-                    {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.name)
-                    </td>
-                    <td>
-                        @foreach (var thing in item.investmentsIn)
-                                {
-                                @Html.DisplayFor(modelItem => thing.amount)<br />
-                                }
-                    </td>
-                    <td>
-                        @foreach (var thing in item.investmentsIn)
-                                {
-                                @Html.DisplayFor(modelItem => thing.date)<br />
-                                }
-                    </td>
-                    <td>
-                        @foreach (var thing in item.investmentsIn)
-                                {
-                                @Html.DisplayFor(modelItem => thing.entityFrom.name)<br />
-                                }
-                    </td>
-                    <td>
-                        @{  if (item.report != null)
-                                    {
-                                        string reportID = Convert.ToString(item.report.ID);
-
-                                @Html.ActionLink("View", reportID, "Details", "Reports")
-                                    }
-                                    else
-                                    {
-                                        //Default create report page right now
-                                @Html.ActionLink("Create", "Create", "Reports")
-                                    }
+                @*@if ( user.ID has new reports/ report requests)
+                        {
+                            <span style="display:block; text-align:right;">
+                                <span class="fa fa-exclamation"></span>
+                                <span class="fa fa-file-o"></span>
+                            </span>
                         }
-                    </td>
-                </tr>
+                    else
+                        {
+                            <span style="display:block; text-align:right;">
+                                <span class="fa fa-file-o"></span>
+                             </span>
+                        }*@
+                <span style="display:block; text-align:right;">
+                    <span class="fa fa-exclamation"></span>
+                    <span class="fa fa-file-o"></span>
+                </span>
+ 
+                <div class="spaceDivs">
+                <h2>Investments Sent</h2>
+                <div class="addpadding">
+
+                    @Html.ActionLink("Create New Investment", "Create", "Investments", "Investments", new { @class = "button" })
+
+                    @Html.ActionLink("View All Investments", "Index", "Investments", "Investments", new { @class = "button" })
+
+                    @if (Model.investmentsOut.Count != 0)
+                        {
+                            <table class="table">
+                                <tr>
+                                    <th>
+                                        Investment Date
+                                    </th>
+                                    <th>
+                                        Value
+                                    </th>
+                                    <th>
+                                        Recipient
+                                    </th>
+                                    <th>
+                                        Reports
+                                    </th>
+                                </tr>
+
+                                @*Displays each investment in the table*@
+                                @{foreach (var item in Model.investmentsOut.Take(5))
+                                    {
+                                    <tr>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.date)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.amount)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.entityTo.name)
+                                        </td>
+                                        <td>
+                                            @{  if (item.projectTo.report != null)
+                                                {
+                                                    string reportID = Convert.ToString(item.projectTo.report.ID);
+                                                    @Html.ActionLink("Report", reportID, "Details", "Report")
+                                                }
+                                                else
+                                                {
+                                                    <span>No report available.</span>
+                                                }
+                                            }
+                                        </td>
+                                    </tr>
                                     }
-                                }
-        </table>
-         }
-         else
-         {
-        <p>You Currently Have No Projects</p>
-         }
-    </div>
-</div>
+                                 }
+                             </table>
+                             }
+                             else
+                             {
+                                 <p>You Currently Have No Investments</p>
+                             }
+
+
+                                </div>
+                            </div>
+                            <div class="spaceDivs">
+                                <h2>My Projects</h2>
+                                <div class="addpadding">
+                                    @Html.ActionLink("Create New Project", "Create", "Projects", "Projects", new { @class = "button" })
+
+                                    @Html.ActionLink("View All Projects", "Index", "Projects", "Projects", new { @class = "button" })
+
+                                    @if (Model.projects.Count != 0)
+                                    {
+
+                                        <table class="table">
+                                            <tr>
+                                                <th>
+                                                    Project Name
+                                                </th>
+                                                <th>
+                                                    Value of Grant
+                                                </th>
+                                                <th>
+                                                    Grant Date
+                                                </th>
+                                                <th>
+                                                    Donor(s)
+                                                </th>
+                                                <th>
+                                                    Report
+                                                </th>
+                                            </tr>
+
+
+                                            @if (Model.investmentsOut != null)
+                                            {
+                                                foreach (var item in Model.projects.Take(5))
+                                                {
+                                                    <tr>
+                                                        <td>
+                                                            @Html.DisplayFor(modelItem => item.name)
+                                                        </td>
+                                                        <td>
+                                                            @foreach (var thing in item.investmentsIn)
+                                                            {
+                                                                @Html.DisplayFor(modelItem => thing.amount)<br />
+                                                            }
+                                                        </td>
+                                                        <td>
+                                                            @foreach (var thing in item.investmentsIn)
+                                                            {
+                                                                @Html.DisplayFor(modelItem => thing.date)<br />
+                                                            }
+                                                        </td>
+                                                        <td>
+                                                            @foreach (var thing in item.investmentsIn)
+                                                            {
+                                                                @Html.DisplayFor(modelItem => thing.entityFrom.name)<br />
+                                                            }
+                                                        </td>
+                                                        <td>
+                                                            @{  if (item.report != null)
+                                                                {
+                                                                    string reportID = Convert.ToString(item.report.ID);
+
+                                                                    @Html.ActionLink("View", reportID, "Details", "Reports")
+                                                                }
+                                                                else
+                                                                {
+                                                                    //Default create report page right now
+                                                                    @Html.ActionLink("Create Report", "Create", "Reports", new { id = item.ID }, null)
+                                                                }
+                                                            }
+                                                        </td>
+                                                    </tr>
+                                                                    }
+                                                                }
+                                        </table>
+                                                                }
+                                                                else
+                                                                {
+                                                                    <p>You Currently Have No Projects</p>
+                                                                }
+                                </div>
+                            </div>
