--- a/ImpactMap/Views/Reports/Create.cshtml
+++ b/ImpactMap/Views/Reports/Create.cshtml
@@ -15,10 +15,10 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.project_ID, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.project_ID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.project_ID, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.ID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -31,6 +31,20 @@
                 </div>
             </div>
         </div>
+
+        <div>Please include information on the following metrics.</div>
+        
+        @*@foreach (var investment in Model.project.investmentsIn)
+        {
+            foreach (var category in investment.categories)
+            {
+                foreach (var metric in category.metrics)
+                {
+                    <span>@metric</span>
+                }
+            }
+        }*@
+
 
         <div class="form-group">
             @Html.LabelFor(model => model.reportText, htmlAttributes: new { @class = "control-label col-md-2" })
