--- a/ImpactMap/Views/Dashboard/Index.cshtml
+++ b/ImpactMap/Views/Dashboard/Index.cshtml
@@ -111,7 +111,7 @@
 
                         <tr>
                             <td>
-                                @Html.DisplayFor(modelItem => item.date.ToString("MM/DD/YY"))
+                                @Html.DisplayFor(modelItem => item.date)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.amount)
