--- a/ImpactMap/Views/Projects/Create.cshtml
+++ b/ImpactMap/Views/Projects/Create.cshtml
@@ -11,7 +11,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Project</h4>
         <hr />
         
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -41,6 +40,6 @@
 }
 
 <div class="addpadding">
-    @Html.ActionLink("Back to List", "Index")
-    @Html.ActionLink("Dashboard", "Index", "Dashboard")
+    @Html.ActionLink("Back to Project List", "Index", "Projects", new { @class = "button" })
+    @Html.ActionLink("Return to Dashboard", "Index", "Dashboard", new { @class = "button" })
 </div>
