--- a/ImpactMap/Views/Manage/Index.cshtml
+++ b/ImpactMap/Views/Manage/Index.cshtml
@@ -85,3 +85,6 @@
         </dd>*@
     </dl>
 </div>
+<div class="addpadding">
+    @Html.ActionLink("Back to Dashboard","Index","Dashboard")
+</div>
