--- a/ImpactMap/Views/Projects/Create.cshtml
+++ b/ImpactMap/Views/Projects/Create.cshtml
@@ -41,6 +41,5 @@
 }
 
 <div class="addpadding">
-    @Html.ActionLink("Back to List", "Index")
-    @Html.ActionLink("Dashboard", "Index", "Dashboard")
+    @Html.ActionLink("Back to List", "Index") | @Html.ActionLink("Dashboard", "Index", "Dashboard")
 </div>
