added dollar signs and fixed dates on dashboard

--- a/ImpactMap/Content/Site.css
+++ b/ImpactMap/Content/Site.css
@@ -108,8 +108,8 @@ a href{
 	footer {
 		text-align: center;
 		background-color: #92C337;
-		padding: 15px
-
+		padding: 15px;
+        height:175px;
 	}
 
 	.footerText {
